# ft2-clone

./: .gitignore  CMakeLists.txt  README.md
src/: ft2_about.c  ft2_audio.c  ft2_audio.h  ft2_config.c  ft2_diskop.c  ft2_events.c  ft2_gui.c  ft2_header.h  ft2_inst_ed.c  ft2_main.c  ft2_module_loader.c  ft2_module_saver.c  ft2_mouse.c  ft2_palette.h  ft2_pushbuttons.c  ft2_sample_ed_features.c  ft2_scopes.c  ft2_scrollbars.c  ft2_sysreqs.c  ft2_video.c  ft2_wav_renderer.c
